k8s/production/network-policy-prod.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-only
  namespace: prod
spec:
  podSelector:
    matchLabels:
      app: frontend-app
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              app.kubernetes.io/name: ingress-nginx
  policyTypes:
    - Ingress
